<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/historicLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/oneWeekAgo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="5dp"
        android:paddingStart="5dp"
        android:textStyle="bold"
        android:text="@string/one_week_ago"/>

    <TextView
        android:id="@+id/sixDaysAgo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="5dp"
        android:paddingStart="5dp"
        android:textStyle="bold"
        android:text="@string/six_days_ago"/>

    <TextView
        android:id="@+id/fiveDaysAgo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="5dp"
        android:paddingStart="5dp"
        android:textStyle="bold"
        android:text="@string/five_days_ago"/>

    <TextView
        android:id="@+id/fourDaysAgo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="5dp"
        android:paddingStart="5dp"
        android:textStyle="bold"
        android:text="@string/four_days_ago"/>

    <TextView
        android:id="@+id/threeDaysAgo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="5dp"
        android:paddingStart="5dp"
        android:textStyle="bold"
        android:text="@string/three_days_ago"/>

    <TextView
        android:id="@+id/twoDaysAgo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="5dp"
        android:paddingStart="5dp"
        android:textStyle="bold"
        android:text="@string/two_days_ago"/>

    <TextView
        android:id="@+id/yesterday"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="5dp"
        android:paddingStart="5dp"
        android:textStyle="bold"
        android:text="@string/yesterday"/>

</LinearLayout>