<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/historicLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/liteGrey">

    <FrameLayout
        android:id="@+id/oneWeekAgoFrame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/oneWeekAgoText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingStart="5dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/one_week_ago"/>

        <ImageButton
            android:id="@+id/oneWeekAgoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginEnd="15dp"
            android:background="@null"
            android:src="@drawable/ic_comment_black_48px" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/sixDaysAgoFrame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/sixDaysAgoText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingStart="5dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/six_days_ago"/>

        <ImageButton
            android:id="@+id/sixDaysAgoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginEnd="15dp"
            android:background="@null"
            android:src="@drawable/ic_comment_black_48px" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fiveDaysAgoFrame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/fiveDaysAgoText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingStart="5dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/five_days_ago"/>

        <ImageButton
            android:id="@+id/fiveDaysAgoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginEnd="15dp"
            android:background="@null"
            android:src="@drawable/ic_comment_black_48px" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fourDaysAgoFrame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/fourDaysAgoText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingStart="5dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/four_days_ago"/>

        <ImageButton
            android:id="@+id/fourDaysAgoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginEnd="15dp"
            android:background="@null"
            android:src="@drawable/ic_comment_black_48px" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/threeDaysAgoFrame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/threeDaysAgoText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingStart="5dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/three_days_ago"/>

        <ImageButton
            android:id="@+id/threeDaysAgoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginEnd="15dp"
            android:background="@null"
            android:src="@drawable/ic_comment_black_48px" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/twoDaysAgoFrame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/twoDaysAgoText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingStart="5dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/two_days_ago"/>

        <ImageButton
            android:id="@+id/twoDaysAgoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginEnd="15dp"
            android:background="@null"
            android:src="@drawable/ic_comment_black_48px" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/yesterdayFrame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/yesterdayText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp"
            android:paddingStart="5dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/yesterday"/>

        <ImageButton
            android:id="@+id/yesterdayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginEnd="15dp"
            android:background="@null"
            android:src="@drawable/ic_comment_black_48px" />

    </FrameLayout>

</LinearLayout>